test-cases/final-dump/bad_reification.exp
Error detected during type checking of module(s) bad_reification
final-dump/bad_reification.wybe:3:1: Can't reify call to test proc foo with outputs
