test-cases/final-dump/bad_reification.wybe
def {test} foo(?i:int) { ?i = 1; fail }

foo(?i, _) # ignore if the test fails
!println(i)
